update password vsalidation and user
