# internal/models/searchmodels/search_plak3_user.go
@@ -1,5 +1,8 @@
 package searchmodels
 
+// UserSearchCriteria  represents the criteria for searching users
+// @Description User model.
+// @Name UserSearchCriteria
 type UserSearchCriteria struct {
 	ID        int64  `json:"Id"`
 	FirstName string `json:"firstName,omitempty"`
